WebGateEJB/src/org/correlibre/qop/parsing2/QOPGrammar.java
/* Generated By:JavaCC: Do not edit this line. QOPGrammar.java */
package org.correlibre.qop.parsing2;
import java.io.StringReader;
import java.io.Reader;
import java.util.Map;
import java.util.HashMap;

public class QOPGrammar implements QOPGrammarConstants {
  private boolean result;

  private Map <String, String> values;

  public QOPGrammar(String src, Map <String, String> values)
  {
    this ((Reader) (new StringReader(src)));
    this.values = values;
    System.out.println("src: "+src);

  }

  public static void main(String args []) throws ParseException
  {
    try
    {
      String rule = args [0];
      Map < String, String > values = new HashMap < String, String > ();
      values.put("preg_233_E_A_H", "0");
      values.put("preg_233_E_C", "null");
      values.put("preg_233_E_B_H", "0");
      values.put("preg_4", "null");
      QOPGrammar parser = new QOPGrammar(rule, values);
      parser.parse();
      System.out.println("\u005cnresult: "+parser.getResult());
    }
    catch (Exception e)
    {
      e.printStackTrace();
    }
  }

  public boolean getResult()
  {
    return result;
  }

  final public void parse() throws ParseException {
    if (jj_2_1(8)) {
      expression();
    } else if (jj_2_2(8)) {
      jj_consume_token(LP);
      expression();
      jj_consume_token(RP);
      jj_consume_token(0);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void expression() throws ParseException {
  boolean b1;
  boolean b2;

  Boolean lResult = null;
    if (jj_2_3(8)) {
      b1 = compositeBooleanExpression();
                                         lResult = b1; System.out.println("\u005cnlResult1: "+lResult);
    } else if (jj_2_4(8)) {
      jj_consume_token(LP);
      b1 = compositeBooleanExpression();
                                         lResult = b1; System.out.println("\u005cnlResult2: "+lResult);
      jj_consume_token(RP);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_1:
    while (true) {
      if (jj_2_5(8)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_6(8)) {
        jj_consume_token(OR);
        b2 = compositeBooleanExpression();
                                                    lResult = lResult || b2; System.out.println("\u005cnlResult4 ("+lResult+" || "+b2+"): "+lResult);
      } else if (jj_2_7(8)) {
        jj_consume_token(AND);
        b2 = compositeBooleanExpression();
                                                     lResult = lResult && b2; System.out.println("\u005cnlResult5("+lResult+" && "+b2+"): "+lResult);
      } else if (jj_2_8(8)) {
        jj_consume_token(OR);
        jj_consume_token(LP);
        b2 = compositeBooleanExpression();
                                                          lResult = lResult || b2; System.out.println("\u005cnlResult6: "+lResult);
        jj_consume_token(RP);
      } else if (jj_2_9(8)) {
        jj_consume_token(AND);
        jj_consume_token(LP);
        b2 = compositeBooleanExpression();
                                                           lResult = lResult && b2; System.out.println("\u005cnlResult7: "+lResult);
        jj_consume_token(RP);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
   result = lResult;System.out.println("\u005cnlResultFinal: "+lResult);
  }

  final public boolean compositeBooleanExpression() throws ParseException {
  boolean b1;
  boolean b2;
  Boolean lResult = null;
    b1 = booleanExpression();
        lResult = b1;
    label_2:
    while (true) {
      if (jj_2_10(8)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_11(8)) {
        jj_consume_token(OR);
        b2 = booleanExpression();
                                           lResult = lResult || b2;
      } else if (jj_2_12(8)) {
        jj_consume_token(AND);
        b2 = booleanExpression();
                                           lResult = lResult && b2;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
   {if (true) return lResult;}
    throw new Error("Missing return statement in function");
  }

  final public boolean booleanExpression() throws ParseException {
  double n1;
  double n2;

  boolean b1;
  boolean b2;
  boolean boolExp;

  String s1;
  String s2;
    if (jj_2_37(8)) {
      if (jj_2_13(8)) {
        jj_consume_token(LP);
        n1 = numericTerm();
        jj_consume_token(EQ);
        n2 = numericTerm();
                                                 System.out.println("(n1:"+n1+"= n2:"+n2); {if (true) return (n1 == n2);}
      } else if (jj_2_14(8)) {
        n1 = numericTerm();
        jj_consume_token(NEQ);
        n2 = numericTerm();
                                                    System.out.println("(n1:"+n1+" != n2:"+n2); {if (true) return (n1 != n2);}
      } else if (jj_2_15(8)) {
        n1 = numericTerm();
        jj_consume_token(LT);
        n2 = numericTerm();
                                                   System.out.println("(n1:"+n1+" < n2:"+n2); {if (true) return (n1 < n2);}
      } else if (jj_2_16(8)) {
        n1 = numericTerm();
        jj_consume_token(LTE);
        n2 = numericTerm();
                                                    System.out.println("(n1:"+n1+" <= n2:"+n2); {if (true) return (n1 <= n2);}
      } else if (jj_2_17(8)) {
        n1 = numericTerm();
        jj_consume_token(GT);
        n2 = numericTerm();
                                                   System.out.println("(n1:"+n1+" > n2:"+n2); {if (true) return (n1 > n2);}
      } else if (jj_2_18(8)) {
        n1 = numericTerm();
        jj_consume_token(GTE);
        n2 = numericTerm();
                                                    System.out.println("(n1:"+n1+" >= n2:"+n2); {if (true) return (n1 >= n2);}
        jj_consume_token(RP);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_38(8)) {
      if (jj_2_19(8)) {
        n1 = numericTerm();
        jj_consume_token(EQ);
        n2 = numericTerm();
                                                 System.out.println("n1:"+n1+" n2:"+n2); {if (true) return (n1 == n2);}
      } else if (jj_2_20(8)) {
        n1 = numericTerm();
        jj_consume_token(NEQ);
        n2 = numericTerm();
                                                     {if (true) return (n1 != n2);}
      } else if (jj_2_21(8)) {
        n1 = numericTerm();
        jj_consume_token(LT);
        n2 = numericTerm();
                                                    {if (true) return (n1 < n2);}
      } else if (jj_2_22(8)) {
        n1 = numericTerm();
        jj_consume_token(LTE);
        n2 = numericTerm();
                                                     {if (true) return (n1 <= n2);}
      } else if (jj_2_23(8)) {
        n1 = numericTerm();
        jj_consume_token(GT);
        n2 = numericTerm();
                                                    {if (true) return (n1 > n2);}
      } else if (jj_2_24(8)) {
        n1 = numericTerm();
        jj_consume_token(GTE);
        n2 = numericTerm();
                                                     {if (true) return (n1 >= n2);}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_39(8)) {
      if (jj_2_25(8)) {
        jj_consume_token(LP);
        b1 = booleanTerm();
        jj_consume_token(EQ);
        b2 = booleanTerm();
                                                 {if (true) return (b1 == b2);}
      } else if (jj_2_26(8)) {
        b1 = booleanTerm();
        jj_consume_token(NEQ);
        b2 = booleanTerm();
                                                    {if (true) return (b1 != b2);}
      } else if (jj_2_27(8)) {
        b1 = booleanTerm();
        jj_consume_token(OR);
        b2 = booleanTerm();
                                                   {if (true) return (b1 || b2);}
      } else if (jj_2_28(8)) {
        b1 = booleanTerm();
        jj_consume_token(AND);
        b2 = booleanTerm();
                                                    {if (true) return (b1 && b2);}
        jj_consume_token(RP);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_40(8)) {
      if (jj_2_29(8)) {
        b1 = booleanTerm();
        jj_consume_token(EQ);
        b2 = booleanTerm();
                                                 {if (true) return (b1 == b2);}
      } else if (jj_2_30(8)) {
        b1 = booleanTerm();
        jj_consume_token(NEQ);
        b2 = booleanTerm();
                                                    {if (true) return (b1 != b2);}
      } else if (jj_2_31(8)) {
        b1 = booleanTerm();
        jj_consume_token(OR);
        b2 = booleanTerm();
                                                   {if (true) return (b1 || b2);}
      } else if (jj_2_32(8)) {
        b1 = booleanTerm();
        jj_consume_token(AND);
        b2 = booleanTerm();
                                                    {if (true) return (b1 && b2);}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_41(8)) {
      if (jj_2_33(8)) {
        jj_consume_token(LP);
        s1 = qStringTerm();
        jj_consume_token(EQ);
        s2 = qStringTerm();
                                                {if (true) return (s1.equalsIgnoreCase(s2));}
      } else if (jj_2_34(8)) {
        s1 = qStringTerm();
        jj_consume_token(NEQ);
        s2 = qStringTerm();
                                                    {if (true) return (!s1.equalsIgnoreCase(s2));}
        jj_consume_token(RP);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_42(8)) {
      if (jj_2_35(8)) {
        s1 = qStringTerm();
        jj_consume_token(EQ);
        s2 = qStringTerm();
                                                {if (true) return (s1.equalsIgnoreCase(s2));}
      } else if (jj_2_36(8)) {
        s1 = qStringTerm();
        jj_consume_token(NEQ);
        s2 = qStringTerm();
                                                    {if (true) return (!s1.equalsIgnoreCase(s2));}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Double numericTerm() throws ParseException {
  Token t = null;
  Token t2 = null;
  Token t3 = null;

  String value;
  Double total = null;
    if (jj_2_45(8)) {
      t = jj_consume_token(NUMBER);
        System.out.print(t.image+" ");
        {if (true) return new Double(t.image);}
    } else if (jj_2_46(8)) {
      t = jj_consume_token(KEYSTRING);
        value = values.get(t.image);
        System.out.print(t.image+": "+value);
        if(value == null || "null".equalsIgnoreCase(value) || value.length() <= 0)
                value = "0";

        {if (true) return new Double(value);}
    } else if (jj_2_47(8)) {
      jj_consume_token(LP);
      t = jj_consume_token(NUMBER);
                       total = new Double(t.image); System.out.print(t.image);
      jj_consume_token(PLUS);
      t2 = jj_consume_token(NUMBER);
                       total += (new Double(t2.image)); System.out.print("+"+t2.image);
      label_3:
      while (true) {
        if (jj_2_43(8)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(PLUS);
        t3 = jj_consume_token(NUMBER);
                       total += (new Double(t3.image)); System.out.print("+"+t3.image);
      }
      jj_consume_token(RP);
        //total = new Double(t.image)+new Double(t2.image);
        System.out.print("="+total);
        {if (true) return total;}
    } else if (jj_2_48(8)) {
      jj_consume_token(LP);
      t = jj_consume_token(KEYSTRING);
                         total = new Double(values.get(t.image)); System.out.print(values.get(t.image)+"("+t.image+")");
      jj_consume_token(PLUS);
      t2 = jj_consume_token(KEYSTRING);
                          total += (new Double(values.get(t2.image))); System.out.print("+"+values.get(t2.image)+"("+t2.image+")");
      label_4:
      while (true) {
        if (jj_2_44(8)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(PLUS);
        t3 = jj_consume_token(KEYSTRING);
                          total += (new Double(values.get(t3.image))); System.out.print("+"+values.get(t3.image)+"("+t3.image+")");
      }
      jj_consume_token(RP);
        //System.out.print(values.get(t.image)+"+"+values.get(t2.image));
        System.out.print("="+total);
        {if (true) return total;}
    } else if (jj_2_49(8)) {
      jj_consume_token(LP);
      t = jj_consume_token(NUMBER);
      jj_consume_token(MINUS);
      t2 = jj_consume_token(NUMBER);
      jj_consume_token(RP);
        System.out.print(values.get(t.image)+"-"+values.get(t2.image));
        {if (true) return new Double(t.image)-new Double(t2.image);}
    } else if (jj_2_50(8)) {
      jj_consume_token(LP);
      t = jj_consume_token(KEYSTRING);
      jj_consume_token(MINUS);
      t2 = jj_consume_token(KEYSTRING);
      jj_consume_token(RP);
        System.out.print(values.get(t.image)+"-"+values.get(t2.image));
        {if (true) return new Double(values.get(t.image))-new Double(values.get(t2.image));}
    } else if (jj_2_51(8)) {
      jj_consume_token(LP);
      t = jj_consume_token(NUMBER);
      jj_consume_token(TIMES);
      t2 = jj_consume_token(NUMBER);
      jj_consume_token(RP);
        System.out.print(t.image+"*"+t2.image);
        {if (true) return new Double(t.image)*new Double(t2.image);}
    } else if (jj_2_52(8)) {
      jj_consume_token(LP);
      t = jj_consume_token(KEYSTRING);
      jj_consume_token(TIMES);
      t2 = jj_consume_token(KEYSTRING);
      jj_consume_token(RP);
        System.out.print(values.get(t.image)+"*"+values.get(t2.image));
        {if (true) return new Double(values.get(t.image))*new Double(values.get(t2.image));}
    } else if (jj_2_53(8)) {
      jj_consume_token(LP);
      t = jj_consume_token(NUMBER);
      jj_consume_token(DIVIDE);
      t2 = jj_consume_token(NUMBER);
      jj_consume_token(RP);
        System.out.print(t.image+"/"+t2.image);
        {if (true) return new Double(t.image)/new Double(t2.image);}
    } else if (jj_2_54(8)) {
      jj_consume_token(LP);
      t = jj_consume_token(KEYSTRING);
      jj_consume_token(DIVIDE);
      t2 = jj_consume_token(KEYSTRING);
      jj_consume_token(RP);
        System.out.print(values.get(t.image)+"/"+values.get(t2.image));
        {if (true) return new Double(values.get(t.image))/new Double(values.get(t2.image));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Boolean booleanTerm() throws ParseException {
  Token t;
  String value;
  boolean boolExp;
    if (jj_2_55(8)) {
      t = jj_consume_token(BOOL);
        System.out.print(t.image+" ");
        {if (true) return new Boolean(t.image);}
    } else if (jj_2_56(8)) {
      t = jj_consume_token(KEYSTRING);
        value = values.get(t.image);
        System.out.print(t.image+": "+value);
        {if (true) return new Boolean(value);}
    } else if (jj_2_57(8)) {
      jj_consume_token(LP);
      boolExp = booleanExpression();
           System.out.print(boolExp+"b ");
           {if (true) return boolExp;}
      jj_consume_token(RP);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String qStringTerm() throws ParseException {
  Token t;
  String value;
    if (jj_2_58(8)) {
      t = jj_consume_token(QUOTED_STRING);
        System.out.print(t.image+" ");
        {if (true) return t.image;}
    } else if (jj_2_59(8)) {
      t = jj_consume_token(KEYSTRING);
        value = values.get(t.image);
        System.out.print(t.image+": "+value);
        if(value == null)
                value = "null";
        System.out.print("value: "+value);
        {if (true) return value;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
